--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux-starter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React Redux Starter ---",
   "main": "index.js",
   "scripts": {
@@ -13,19 +13,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "autoprefixer": "^9.1.5",
     "clean-webpack-plugin": "^0.1.19",
+    "color": "^3.1.2",
     "history": "^4.7.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
+    "np": "^6.2.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-jss": "^10.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.0",
     "webpack": "^4.20.2",
     "webpack-merge": "^4.1.4"
   },
