--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-redux-starter",
-  "version": "1.0.1",
-  "description": "React Redux Starter ---",
-  "main": "index.js",
+  "name": "synapsefi-chatbot-ui",
+  "version": "1.0.3",
+  "description": "Synapse Chatbot UI components.",
+  "main": "dist/index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack -p --config webpack.prod.js",
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "autoprefixer": "^9.1.5",
