--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack -p --config webpack.prod.js",
     "server-start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
