--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "synapsefi-chatbot-ui",
   "version": "1.0.4",
   "description": "Synapse Chatbot UI components.",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack -p --config webpack.prod.js",
