--- a/package.json
+++ b/package.json
@@ -3,69 +3,53 @@
   "version": "1.1.3",
   "description": "Synapse Chatbot UI components.",
   "main": "index.js",
-  "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --open",
-    "build": "webpack -p --config webpack.prod.js",
-    "server-start": "node server/server.js",
-    "test": "echo \"No test specified\""
-  },
+  "license": "MIT",
   "files": [
     "dist"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@material-ui/core": "^4.9.14",
-    "autoprefixer": "^9.1.5",
-    "clean-webpack-plugin": "^0.1.19",
-    "color": "^3.1.2",
-    "history": "^4.7.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "np": "^6.2.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-jss": "^10.1.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0",
-    "webpack": "^4.20.2",
-    "webpack-merge": "^4.1.4"
+  "scripts": {
+    "start": "webpack-dev-server --mode development",
+    "docs": "NODE_ENV=production webpack -p",
+    "build": "babel src -d dist",
+    "clean": "rm -rf dist",
+    "dist": "npm run clean && npm run build",
+    "push": "npm run clean && npm run build && npm publish"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.5.5",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.8.0"
+    "color": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.10",
+    "raw-loader": "^0.5.1",
+    "react": "^16.3.2",
+    "react-animate-height": "^2.0.1",
+    "react-dom": "^16.3.2",
+    "react-number-format": "^3.4.3",
+    "react-onclickoutside": "^6.7.1",
+    "styled-components": "^3.2.6",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "peerDependencies": {
+    "styled-components": "^3.2.6",
+    "react-onclickoutside": "^6.7.1",
+    "react-animate-height": "^2.0.1",
+    "react-number-format": "^3.4.3",
+    "color": "^3.0.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-plugin-styled-components": "^1.10.7"
   }
 }
