--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "push": "npm run clean && npm run build && npm publish"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0-beta.6",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -46,10 +51,10 @@
     "color": "^3.0.0"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "babel-plugin-styled-components": "^1.10.7"
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
+    "babel-plugin-styled-components": "^1.10.6"
   }
 }
