--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "styled-components": "^3.2.6",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "hex-to-rgba": "^1.0.2"
   },
   "peerDependencies": {
     "styled-components": "^3.2.6",
