--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "push": "npm run clean && npm run build && npm publish"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
+    "@babel/cli": "^7.10.0",
+    "@babel/core": "^7.10.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "color": "^3.0.0",
+    "hex-to-rgba": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "raw-loader": "^0.5.1",
@@ -41,8 +42,7 @@
     "styled-components": "^3.2.6",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.5",
-    "hex-to-rgba": "^1.0.2"
+    "webpack-dev-server": "^3.1.5"
   },
   "peerDependencies": {
     "styled-components": "^3.2.6",
