--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "raw-loader": "^0.5.1",
-    "react": "^16.3.2",
+    "react": "^16.7.0-alpha.2",
     "react-animate-height": "^2.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-number-format": "^3.4.3",
     "react-onclickoutside": "^6.7.1",
     "styled-components": "^3.2.6",
@@ -56,6 +56,8 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.5",
-    "babel-plugin-styled-components": "^1.10.6"
+    "@material-ui/core": "^4.3.2",
+    "babel-plugin-styled-components": "^1.10.6",
+    "react-jss": "^10.1.1"
   }
 }
