--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
     "@babel/runtime": "^7.5.5",
     "@material-ui/core": "^4.3.2",
     "babel-plugin-styled-components": "^1.10.6",
-    "react-jss": "^10.1.1"
+    "img-loader": "^3.0.1",
+    "react-autosize-textarea": "^7.0.0",
+    "react-jss": "^10.1.1",
+    "react-pdf": "^4.1.0",
+    "react-progressive-image": "^0.6.0",
+    "url-loader": "^4.1.0"
   }
 }
