--- a/package.json
+++ b/package.json
@@ -60,9 +60,12 @@
     "babel-plugin-styled-components": "^1.10.6",
     "img-loader": "^3.0.1",
     "react-autosize-textarea": "^7.0.0",
+    "react-input-mask": "^2.0.4",
     "react-jss": "^10.1.1",
     "react-pdf": "^4.1.0",
     "react-progressive-image": "^0.6.0",
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0",
     "url-loader": "^4.1.0"
   }
 }
